prevent text from overflowing outside of the card component

--- a/app/ui/Card.module.css
+++ b/app/ui/Card.module.css
@@ -4,8 +4,10 @@
     width: 90%;
     margin: auto;
     padding: 1rem;
+    overflow-wrap: break-word;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
 }
+
 
 @media(min-width: 768px) {
     .card {
